--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "sua-card-generator-web",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:prod": "webpack --mode production",
+    "build:dev": "webpack --mode development"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,8 @@
   },
   "homepage": "https://github.com/maxhaponenko/sua-card-generator-web#readme",
   "devDependencies": {
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^8.2.5",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
   },
