--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@babel/preset-react": "^7.18.6",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "@webpack-cli/generators": "^2.5.0",
+    "@webpack-cli/generators": "^0.1.9",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
@@ -43,8 +43,11 @@
     "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
+    "@types/styled-components": "^5.1.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "styled-components": "^5.3.5"
   }
 }
