--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,14 +7,15 @@
     "target": "es5",
     "allowJs": true,
     
-    "baseUrl": "src",
+    "baseUrl": "./src",
     "paths": {
       "@/*": ["*"]
     },
     
-    "moduleResolution": "Node"
+    "moduleResolution": "node"
   },
-  
+  "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules"],
   "files": [
     "src/index.tsx"
   ]
