--- a/package.json
+++ b/package.json
@@ -55,9 +55,15 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "@types/styled-components": "^5.1.25",
+    "file-loader": "^6.2.0",
+    "i": "^0.3.7",
+    "moment": "^2.29.4",
+    "normalize.css": "^8.0.1",
+    "npm": "^8.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "url-loader": "^4.1.1"
   }
 }
