--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "module": "es6",
     "target": "es5",
     "allowJs": true,
+    "sourceMap": true,
     
     "baseUrl": "./src",
     "paths": {
